<?xml version="1.0"?>
<package>
  <name>theseus</name>
  <version>0.0.0</version>
  <description>The theseus package. Path Planning algorithms for rosplane.</description>
  <maintainer email="austinhurst@msn.com">austin</maintainer>
  <license>TODO</license>
  <author email="austinhurst@msn.com">Austin Hurst</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosplane_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rosplane_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>

  <export>

  </export>
</package>
