<?xml version="1.0"?>
<package>
  <name>theseus</name>
  <version>0.0.0</version>
  <description>The theseus package. Path Planning algorithms for rosplane.</description>
  <maintainer email="austinhurst@msn.com">austin</maintainer>
  <license>TODO</license>
  <author email="austinhurst@msn.com">Austin Hurst</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosplane_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>uav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rviz</build_depend>
  <run_depend>rviz</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rosplane_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>uav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
    <rviz plugin="${prefix}/plugin_description.xml"/>

  </export>
</package>
